[project]
name = "tempest-to-weewx"
version = "0.1.0"
description = "A nice utilize to backfill WeatherFlow Tempest data into Weewx."
authors = [
    {name = "grleblanc",email = "greg@glsec.us"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
